--- a/crm/templates/crm/pages/invoices/invoices_list.html
+++ b/crm/templates/crm/pages/invoices/invoices_list.html
@@ -154,8 +154,8 @@
                                 <td data-href="{% url 'invoice_detail' invoice.id %}" class="tr-link">{{ invoice.amount }}</td>
                                 <td style="padding: 6px 5px 7px 4px">
                                     <div class="btn-group pull-right">
-                                        <a class="btn btn-default btn-sm" href="" title="Копировать" data-toggle="tooltip"><i class="fas fa-copy"></i></a>
-                                        <a class="btn btn-default btn-sm" href="" title="Редактировать" data-toggle="tooltip"><i class="fa fa-pencil-alt"></i></a>
+                                        <a class="btn btn-default btn-sm" href="{% url 'invoice_create' %}?invoice_id={{ invoice.id }}" title="Копировать" data-toggle="tooltip"><i class="fas fa-copy"></i></a>
+                                        <a class="btn btn-default btn-sm" href="{% url 'invoice_update' invoice.id %}" title="Редактировать" data-toggle="tooltip"><i class="fa fa-pencil-alt"></i></a>
                                         <button type="button" class="btn btn-default btn-sm not-allowed" data-bs-toggle="modal" data-bs-target="#deleteModal-{{ forloop.counter }}"><i class="fa fa-trash-alt"></i></button>
                                     </div>
                                 </td>
