--- a/crm/templates/crm/pages/messages/message_create.html
+++ b/crm/templates/crm/pages/messages/message_create.html
@@ -25,7 +25,7 @@
     </style>
 {% endblock %}
 
-{% block applications %}class="nav-link active-link" style="color: black; background-color: #e1f1ea"{% endblock %}
+{% block messages %}class="nav-link active-link" style="color: black; background-color: #e1f1ea"{% endblock %}
 
 {% block title %}Новое сообщение{% endblock %}
 {% block name_page %}Новое сообщение{% endblock %}
