--- a/crm/templates/crm/pages/invoices/invoice_detail.html
+++ b/crm/templates/crm/pages/invoices/invoice_detail.html
@@ -33,9 +33,9 @@
         <div class="container-fluid">
             <span style="font-size: 20px" class="text-muted">Просмотр квитанции</span>
             <div style="float: right; margin-bottom: 5px; padding-top: 5px; display: inline-block">
-                <a href="" class="btn btn-default" style="font-size: 14px; max-height: 34px">Печать</a>
-                <a href="" class="btn btn-default" style="font-size: 14px; max-height: 34px">Отправить на e-mail</a>
-                <a href="" class="btn btn-primary" style="font-size: 14px; max-height: 34px">Редактировать квитанцию</a>
+                <a href="{% url 'templates_list' object.id %}" class="btn btn-default" style="font-size: 14px; max-height: 34px">Печать</a>
+                <a href="{% url 'templates_list' object.id %}" class="btn btn-default" style="font-size: 14px; max-height: 34px">Отправить на e-mail</a>
+                <a href="{% url 'invoice_update' object.id %}" class="btn btn-primary" style="font-size: 14px; max-height: 34px">Редактировать квитанцию</a>
             </div>
             <div class="dropdown-divider" style="border-color:lightgrey; margin-top: 15px"></div>
             <table id="my-table" class="table table-hover table-striped table-responsive no-padding" style="color: #333333; font-size: 14px; padding-bottom: 10px">
