--- a/crm/templates/crm/pages/invoices/invoice_update.html
+++ b/crm/templates/crm/pages/invoices/invoice_update.html
@@ -430,8 +430,13 @@
 
         // ajax for FORMSET (services by tariff)
         $('.set-tariff-services').click(function () {
-            $('#formset-table tbody tr').remove()
-            $('#current_amount').html('0.00')
+            $('#formset-table tbody tr').each(function (index, element) {
+                let indexx = element.id.replace(/-form/g, '')
+                $('.delete-list').append('<input type="hidden" value="on" name="' + indexx + '-DELETE" id="id_' + indexx + '-DELETE">');
+                $('#' + indexx + '-form').css('display', 'none');
+                $('#id_' + indexx + '-full_cost').removeClass('full-cost')
+                get_full_cost()
+            })
             let tariff_id = $('#id_tariff').val()
             $.ajax({
                 url: '{% url "work_with_invoice" %}',
@@ -446,7 +451,7 @@
                             $('#id_formset-TOTAL_FORMS').val(parseInt(form_idx) + 1);
                         }
                         let data_services = data.services
-                        $('#formset-table tbody tr').each(function (id, elem){
+                        $('#formset-table tbody tr:visible').each(function (id, elem){
                             let service = elem.id.replace(/-form/g, '-service')
                             let unit = elem.id.replace(/-form/g, '-unit')
                             let cost_for_unit = elem.id.replace(/-form/g, '-cost_for_unit')
