last version of the project (work with Excel)

--- a/crm/templates/crm/pages/invoices/templates/templates_for_invoice_list.html
+++ b/crm/templates/crm/pages/invoices/templates/templates_for_invoice_list.html
@@ -47,11 +47,12 @@
             get_xls(file)
         })
 
-        function get_xls(template_id) {
+        function get_xls(template) {
             $.ajax({
                 url: '{% url "get_xls_by_template" %}',
                 type: 'GET',
-                data: {'template_id': template_id},
+                data: {'template': template,
+                       'invoice_id': '{{ object.id }}'},
                 success: (data) => {
                     console.log('yes')
                 },
