--- a/main/templates/main/pages/contact_page.html
+++ b/main/templates/main/pages/contact_page.html
@@ -9,7 +9,7 @@
 
 {% block title %}Система "ДОМ 24" - Контакты{% endblock %}
 
-{% block services %}active-link{% endblock %}
+{% block contacts %}active-link{% endblock %}
 
 {% block content %}
     <div class="container" style="margin-top: 50px; max-width: 1140px">
