--- a/crm/templates/crm/pages/system_settings/users/user_update.html
+++ b/crm/templates/crm/pages/system_settings/users/user_update.html
@@ -40,7 +40,7 @@
                     <p style="margin: 0; font-weight: 600; font-size: 15px">{{ form.last_name.label }}</p>
                     {{ form.last_name }}
                 </div>
-                <div class="col-xl-6 col-md-6" style="padding: 0 10px">
+                <div class="col-xl-6 col-md-6" style="padding: 0 10px; {% if not user.is_superuser %}display: none{% endif %}">
                     <p style="margin: 0; font-weight: 600; font-size: 15px">{{ form.password1.label }}</p>
                     <div>
                         <div class="input-group">
@@ -69,7 +69,7 @@
                     <p style="margin: 0; font-weight: 600; font-size: 15px">{{ form.telephone.label }}</p>
                     {{ form.telephone }}
                 </div>
-                <div class="col-xl-6 col-md-6" style="padding: 0 10px">
+                <div class="col-xl-6 col-md-6" style="padding: 0 10px; {% if not user.is_superuser %}display: none{% endif %}">
                     <p style="margin: 0; font-weight: 600; font-size: 15px">{{ form.password2.label }}</p>
                     {{ form.password2 }}
                 </div>
